deleted unused htmls

--- a/packages/nr-metadata/nr_metadata/ui/templates/components/AdditionalTitles.jinja
+++ b/packages/nr-metadata/nr_metadata/ui/templates/components/AdditionalTitles.jinja
@@ -1,5 +1,4 @@
 {#def data #}
-
 {% for title in data %}
     <span title="{{ title.titleType }}">
         <div class="ui green basic label lang-tag">
@@ -7,4 +6,4 @@
         </div>
         {{ title.title.value }}
     </span>
-{% endfor %}<
+{% endfor %}
