--- a/packages/nr-metadata/nr_metadata/ui/templates/components/RelatedItems.jinja
+++ b/packages/nr-metadata/nr_metadata/ui/templates/components/RelatedItems.jinja
@@ -38,7 +38,7 @@
 <Field label={_('metadata/relatedItems/itemEndPage.label')}>{{ri.itemEndPage}}</Field>
 <Field label={_('metadata/relatedItems/itemPublisher.label')}>{{ri.itemPublisher}}</Field>
 <Field label={_('metadata/relatedItems/itemRelationType.label')}>
-    <VocabularyItem vocabulary={ri.itemRelationType} search_link={search_link} searchFacet="metadata_relatedItems_itemRelationType" vocabulary_type="item-relation-types"></VocabularyItem>
+    <VocabularyItem vocabulary={ri.itemRelationType} vocabulary_type="item-relation-types"></VocabularyItem>
 </Field>
 <Field label={_('metadata/relatedItems/itemResourceType.label')}>
     <VocabularyItem vocabulary={ri.itemResourceType} search_link={search_link} searchFacet="metadata_resourceType" vocabulary_type="resource-types"></VocabularyItem>
