--- a/packages/nr-metadata/nr_metadata/ui/templates/components/Person.jinja
+++ b/packages/nr-metadata/nr_metadata/ui/templates/components/Person.jinja
@@ -3,14 +3,15 @@
 {% set title = person_dict.fullName ~ ": " ~ _("Find more records by this person") %}
 {% set data = {
     "value": person_dict.fullName,
-    "title": title,
-    "label": person_dict.fullName
+    "title": _("Find more records by this person"),
+    "label": person_dict.fullName,
+    "aria": title,
 } %}
 <div role="listitem" class="item creatibutor-wrap separated">
-        <div class="content">
-            <SearchLink data={data} className="search-link" searchFacet={searchFacet} search_link={search_link}></SearchLink>
-            {%- if roles -%}
-                ({{roles | map(attribute='title') | join(', ') }})
-            {%- endif -%}
-        </div>
+    <div class="content">
+        <SearchLink data={data}  searchFacet={searchFacet} search_link={search_link}></SearchLink>
+        {%- if roles -%}
+            ({{roles | map(attribute='title') | join(', ') }})
+        {%- endif -%}
     </div>
+</div>
