--- a/packages/nr-metadata/nr_metadata/ui/templates/components/Person.jinja
+++ b/packages/nr-metadata/nr_metadata/ui/templates/components/Person.jinja
@@ -1,4 +1,4 @@
-{#def person, search_link, searchFacet, roles = None #}
+{#def person, search_link, searchFacet, role = None #}
 {% set person_dict = person | to_dict %}
 {% set title = person_dict.fullName ~ ": " ~ _("Find more records by this person") %}
 {% set data = {
@@ -7,11 +7,17 @@
     "label": person_dict.fullName,
     "aria": title,
 } %}
+
 <div role="listitem" class="item creatibutor-wrap separated">
     <div class="content">
         <SearchLink data={data}  searchFacet={searchFacet} search_link={search_link}></SearchLink>
-        {%- if roles -%}
-            ({{roles | map(attribute='title') | join(', ') }})
+        {% if person_dict.authorityIdentifiers%}
+            {% for identifier in person_dict.authorityIdentifiers%}
+                <IdentifierBadge identifier={identifier} creatibutorName={person_dict.fullName} />
+            {% endfor %}
+        {% endif %}
+        {%- if role -%}
+            ({{role}})
         {%- endif -%}
     </div>
 </div>
