--- a/packages/nr-metadata/nr_metadata/ui/templates/components/Creatibutor.jinja
+++ b/packages/nr-metadata/nr_metadata/ui/templates/components/Creatibutor.jinja
@@ -1,9 +1,11 @@
-{#def creatibutor, search_link, searchFacet, roles = None #}
+{#def creatibutor, search_link, roles = None #}
 {% set creatibutor_dict = creatibutor | to_dict %}
 {% if creatibutor_dict.nameType == "Personal" %}
   {% set title = _("Find more records by this person") %}
+  {% set searchFacet = "syntheticFields_people" %}
 {% else %}
   {% set title = _("Find more records by this organization") %}
+  {% set searchFacet = "syntheticFields_organizations" %}
 {% endif %}
 {% set data = {
     "value": creatibutor_dict.fullName,
@@ -12,10 +14,11 @@
     "aria": creatibutor_dict.fullName ~ ": " ~ title,
 } %}
 <div role="listitem" class="item creatibutor-wrap separated">
-    <div class="content">
-        <SearchLink data={data}  searchFacet={searchFacet} search_link={search_link}></SearchLink>
-        {%- if roles -%}
-            ({{roles | map(attribute='title') | join(', ') }})
-        {%- endif -%}
-    </div>
+  <div class="content">
+      <SearchLink data={data}  searchFacet={searchFacet} search_link={search_link}></SearchLink>
+              <CreatibutorIdentifier identifiers={creatibutor_dict.authorityIdentifiers} creatibutorName={creatibutor_dict.fullName} />
+      {%- if role -%}
+          ({{role}})
+      {%- endif -%}
+  </div>
 </div>
