fixed role prop

--- a/packages/nr-metadata/nr_metadata/ui/templates/components/Creatibutor.jinja
+++ b/packages/nr-metadata/nr_metadata/ui/templates/components/Creatibutor.jinja
@@ -1,4 +1,4 @@
-{#def creatibutor, search_link, roles = None #}
+{#def creatibutor, search_link, role = None #}
 {% set creatibutor_dict = creatibutor | to_dict %}
 {% if creatibutor_dict.nameType == "Personal" %}
   {% set title = _("Find more records by this person") %}
